<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="newsItem"
            type="com.xavier.newsfeed.model.NewsItem"
            />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/news_background"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/detail_root"
            >

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/news_detail_image_height"
                android:scaleType="centerInside"
                app:imageUrl="@{newsItem.urlToImage}"
                />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/news_item_text_margin"
                android:maxLines="1"
                android:layout_marginLeft="@dimen/news_item_margin_horizontal"
                android:layout_marginRight="@dimen/news_item_margin_horizontal"
                android:text="@{newsItem.title}"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/news_item_title_font_size"
                />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/news_item_text_margin"
                android:maxLines="2"
                android:layout_marginLeft="@dimen/news_item_margin_horizontal"
                android:layout_marginRight="@dimen/news_item_margin_horizontal"
                android:text="@{newsItem.description}"
                android:textColor="@color/textColorDescription"
                android:textSize="@dimen/news_item_description_font_size"
                />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/news_item_text_margin"
                android:layout_marginBottom="@dimen/news_item_text_margin"
                android:maxLines="1"
                android:layout_marginLeft="@dimen/news_item_margin_horizontal"
                android:layout_marginRight="@dimen/news_item_margin_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/news_item_date_font_size"
                app:date="@{newsItem.publishedAt}"
                />
        </LinearLayout>
    </ScrollView>
</layout>