...
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_view"
        >
        <RelativeLayout
            android:id="@+id/list_content_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/error_view"
                android:layout_width="match_parent"
...
                android:gravity="center"
                android:text="@string/news_list_loading_error"
                android:textAlignment="center"
                android:visibility="invisible"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/fragment_news_item"
                />
        </RelativeLayout>
...
